--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
 })
 
 <main>
-  <h1>Шаблон 2022</h1>
+  
+  <div style="max-width: 1000px; margin: auto">
+    <h1 style="text-align: center">Шаблон 2022</h1>
 
-  <picture>
-    <source srcset="@img/start_bg.webp" type="image/webp">
-    <img src="@img/start_bg.jpg" alt="Заставка" width="1400">
-  </picture>
+    <picture>
+      <source srcset="@img/start_bg.webp" type="image/webp">
+      <img src="@img/start_bg.jpg" alt="Заставка" style="width: 100%">
+    </picture>
+  </div>
 </main>
 
 @@include('html/footer.html', {})
