--- a/src/html/header.html
+++ b/src/html/header.html
@@ -11,3 +11,9 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class=@@bodyClass>
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__container">
+        
+      </div>
+    </header>
