--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,8 @@
   "bodyClass": "index-body"
 })
 
-<main>
-  <div style="max-width: 1000px; margin: auto">
-    <h1 style="text-align: center">Шаблон 2023</h1>
-
-    <picture>
-      <source srcset="@img/start_bg.webp" type="image/webp">
-      <img src="@img/start_bg.jpg" alt="Заставка" style="width: 100%">
-    </picture>
-  </div>
+<main class="main">
+  
 </main>
 
 @@include('html/footer.html', {})
